[Das_Schwarze_Auge_5_Tsa_Edition] fixed event handler for status, combat and more (#5531)
* fixed - added event handler to recalculate combat values if status has changed

* add status modifier to attribute roll

add status modifier to attribute roll

* fix change ktw triggers recalculation of combat values

added a ktw_change_flag that is hidden and triggers events if changed.

* add modifier for LE/AE/KE regeneration

* adding fields for coins

--- a/Das_Schwarze_Auge_5_Tsa_Edition/translations/en.json
+++ b/Das_Schwarze_Auge_5_Tsa_Edition/translations/en.json
@@ -144,55 +144,55 @@
   "kosten": "Costs",
   "krank": "Sick",
   "kultur": "Culture",
-  "kurz": "kurz",
-  "kt": "KT",
-  "ladezeit": "Ladezeit in KR",
-  "lang": "lang",
-  "lanzen": "Lanzen",
+  "kurz": "short",
+  "kt": "CT",
+  "ladezeit": "Reloud in CR",
+  "lang": "long",
+  "lanzen": "Lances",
   "le": "LE",
-  "lebensenergie": "Lebensenergie",
+  "lebensenergie": "Life Points",
   "leicht": "leicht",
-  "legendaer": "Legendär (2100 AP)",
-  "leiteigenschaft": "Leiteigenschaft",
-  "leiteigschadensb": "Leiteig. + Schadensb.",
-  "liegend": "Liegend",
-  "magie": "Magie",
+  "legendaer": "Legendary (2100 AP)",
+  "leiteigenschaft": "Primary Attribut",
+  "leiteigschadensb": "Damage Threshold",
+  "liegend": "Prone",
+  "magie": "Magic",
   "malus": "Malus",
-  "max-5": "(max. -5)  ",
-  "maximal": "Maximal",
-  "meisterlich": "Meisterlich (1400 AP)",
-  "merkmal": "Merkmal",
-  "mittel": "mittel",
-  "modfikator-hinzuf": "Modfikator hinzufügen",
-  "modifikator": "Modifikator",
-  "modifikatoren": "Modifikatoren",
-  "modifikatorplus": "Modifikator(+/-)",
-  "modeffekt": "EF-Mod",
-  "modsf": "SF-Mod",
-  "mut": "Mut",
-  "munition": "Munition",
-  "nachteile": "Nachteile",
-  "nah": "nah",
-  "nahkampf": "Nahkampf",
-  "nahkampfwaffe": "Nahkampfwaffe",
-  "nahkampfwaffen": "Nahkampfwaffen",
+  "max-5": "(min. -5)  ",
+  "maximal": "Maximum",
+  "meisterlich": "Masterly (1400 AP)",
+  "merkmal": "Property",
+  "mittel": "medium",
+  "modfikator-hinzuf": "Add Modifier",
+  "modifikator": "Modifier",
+  "modifikatoren": "Modifiers",
+  "modifikatorplus": "Modifier(+/-)",
+  "modeffekt": "Effect-Mod",
+  "modsf": "Sp.Ab.-Mod",
+  "mut": "Courage",
+  "munition": "Ammo",
+  "nachteile": "Disadvantage",
+  "nah": "Close",
+  "nahkampf": "Close Combat",
+  "nahkampfwaffe": "Melee Weapon",
+  "nahkampfwaffen": "Melee Weapons",
   "name": "Name",
-  "naturtalente": "Naturtalente",
-  "nebenhand-at": "Nebenhand AT +/-",
-  "nebenhand-pa": "Nebenhand PA +/-",
-  "nebenhand-tp": "Nebenhand TP +/-",
-  "nebenhandwaffe": "Nebenhandwaffe",
-  "nein": "nein",
+  "naturtalente": "Nature Skills",
+  "nebenhand-at": "Off hand AT +/-",
+  "nebenhand-pa": "Off hand PA +/-",
+  "nebenhand-tp": "Off hand DP +/-",
+  "nebenhandwaffe": "Off hand weapon",
+  "nein": "no",
   "normal": "Normal ",
-  "notizen": "Notizen",
-  "optionen": "Optionen",
+  "notizen": "Notes",
+  "optionen": "Options",
   "pa": "PA",
   "pa-mod": "PA-Mod",
   "passierschlag": "Passierschlag",
-  "parade": "Parade",
-  "parierwaffe": "Parierwaffe",
+  "parade": "Parry",
+  "parierwaffe": "Parry Weapon",
   "paralyse": "Paralyse",
-  "patzer": "Patzer",
+  "patzer": "Botch",
   "pechmagnet": "Pechmagnet",
   "perm-verlust": "Perm. Verlust",
   "probe": "Probe",
@@ -524,5 +524,12 @@
   "freier-modifikator": "freier Kampf-Mod.",
   "ruestungsschutz": "Rüstungsschutz (RS)",
   "faktor": "Faktor",
-  "disclaimer": "© 2019 Ulisses Spiele.  DAS SCHWARZE AUGE, AVENTURIEN, DERE, MYRANOR, THARUN, UTHURIA, RIESLAND und THE DARK EYE sind eingetragene Marken der Ulisses Spiele GmbH, Waldems."
+  "disclaimer": "© 2019 Ulisses Spiele.  DAS SCHWARZE AUGE, AVENTURIEN, DERE, MYRANOR, THARUN, UTHURIA, RIESLAND und THE DARK EYE sind eingetragene Marken der Ulisses Spiele GmbH, Waldems.",
+  "dukaten":"ducats",
+  "silbertaler":"silverthalers",
+  "heller":"halers",
+  "kreuzer":"kreutzers",
+  "geldbeutel":"Purse"
+
+
 }
