--- a/D&D_3-5/translations/fr.json
+++ b/D&D_3-5/translations/fr.json
@@ -117,7 +117,7 @@
 	"melee": "Mêlée",
 	"attack-bonus": "Bonus d’attaque",
 	"ranged": "À distance",
-	"show-grapple-and-base-attack-bonus-macros": "Show Grapple and Base Attack Macros",
+	"show-grapple-and-base-attack-bonus-macros": "Afficher les macros de Saisie et d'Attaque de base",
 	"epic-levels": "Niveaux épiques",
 	"epic-save-bonus": "Bonus de sauvegarde épique",
 	"epic-attack-bonus": "Bonus à l'attaque épique",
@@ -243,7 +243,7 @@
 	"skill-names": "Noms des compétences",
 	"total-bonus-s": "Bonus<br>Total",
 	"stat": "Carac",
-	"ability-modifier-as": "Ability<br>Mod.",
+	"ability-modifier-as": "Modificateur de<br> Caractéristique.",
 	"ranks": "Rangs",
 	"armor-penalty-s": "Malus <br>d'Armure",
 	"miscellaneous-modifier-as": "Mod.<br> divers",
@@ -294,11 +294,11 @@
 	"survival": "Survie",
 	"tumble": "Acrobatie",
 	"use-magic-device": "Utilisation d'objets magiques",
-	"use-rope": "Use Rope",
+	"use-rope": "Utiliser une corde",
 	"other-skills": "Autres compétences",
 	"skill-name": "Nom de la Compétence",
 	"ability-stat-s": "Ability<br>Stat",
-	"trained-only": "Trained Only",
+	"trained-only": "Entraîné seulement",
 	"caster-level": "Niveau de Lanceur de Sorts",
 	"spells-per-day": "Sorts/Jour",
 	"zero": "0",
@@ -314,7 +314,7 @@
 	"casting-ability": "Carac. de Sort",
 	"spell-difficulty-classes": "DD de sort",
 	"spell-penetration-a": "Pén des sorts",
-	"spell-focus": "Spell Focus",
+	"spell-focus": "Focus de sort",
 	"abjuration": "Abjuration",
 	"conjuration": "Invocation",
 	"divination": "Divination",
@@ -325,7 +325,7 @@
 	"transmutation": "Transmutation",
 	"power-points": "Points de Pouvoir",
 	"spell-section": "Section des sorts",
-	"use-prep": "Use/Prep",
+	"use-prep": "Utilisation/Prép",
 	"spell-name": " Nom du Sort ",
 	"level-a": "Niv",
 	"emote-macro": "Emote/macro",
@@ -333,7 +333,7 @@
 	"date": "Date",
 	"note-etc": "Notes...",
 	"ability-recalc-info": "Recalcul du score de caractéristique. Cochez cette case pour forcer un recalcul des scores de caractéristiques.",
-	"weight-setup-info1": " Weight unit setup for weight calculations.",
+	"weight-setup-info1": " Choix de l'unité de poids pour les calculs de poids",
 	"weight-setup-info2": " Unit should be an abbreviation of 2 or 3 characters.",
 	"scaling-factor": " Facteur d’échelle ",
 	"unit": " Unité ",
@@ -349,7 +349,7 @@
 	"hit-dice": "Dé de Vie",
 	"max-hit-points-a": "PV Max",
 	"initiative": "Initiative",
-	"armor-class-modification-info-a": "Armor Class Mod Info",
+	"armor-class-modification-info-a": "Info de mod de classe d'armure",
 	"touch": "Contact",
 	"touch-armor-class-i": "C CA",
 	"flat-footed-i": "PaD",
@@ -359,7 +359,7 @@
 	"space": "Espace",
 	"reach": "Allonge",
 	"special-attacks": "Attaques spéciales",
-	"special-qualities": "Special Qualities",
+	"special-qualities": "Pouvoirs spéciaux",
 	"saves": "Sauvegardes",
 	"fortitude-a": "Vig",
 	"reflex-a": "Réf",
