--- a/Das_Schwarze_Auge_5_Tsa_Edition/translations/en.json
+++ b/Das_Schwarze_Auge_5_Tsa_Edition/translations/en.json
@@ -159,7 +159,7 @@
   "magie": "Magic",
   "malus": "Malus",
   "max-5": "(min. -5)  ",
-  "maximal": "Maximum",
+  "maximal": "Maximal",
   "meisterlich": "Masterly (1400 AP)",
   "merkmal": "Property",
   "mittel": "medium",
@@ -525,11 +525,9 @@
   "ruestungsschutz": "Rüstungsschutz (RS)",
   "faktor": "Faktor",
   "disclaimer": "© 2019 Ulisses Spiele.  DAS SCHWARZE AUGE, AVENTURIEN, DERE, MYRANOR, THARUN, UTHURIA, RIESLAND und THE DARK EYE sind eingetragene Marken der Ulisses Spiele GmbH, Waldems.",
-  "dukaten":"ducats",
-  "silbertaler":"silverthalers",
-  "heller":"halers",
-  "kreuzer":"kreutzers",
-  "geldbeutel":"Purse"
-
-
+  "dukaten": "ducats",
+  "silbertaler": "silverthalers",
+  "heller": "halers",
+  "kreuzer": "kreutzers",
+  "geldbeutel": "Purse"
 }
