--- a/Das_Schwarze_Auge_5_Tsa_Edition/translations/fr.json
+++ b/Das_Schwarze_Auge_5_Tsa_Edition/translations/fr.json
@@ -381,65 +381,65 @@
   "schloesserknacken": "Crochetage",
   "steinbearbeitung": "Travail de la pierre",
   "stoffbearbeitung": "Travail du tissu",
-  "fliegenfw": "Fliegen FW",
-  "gaukeleienfw": "Gaukeleien FW",
-  "kletternfw": "Klettern FW",
-  "koerperbeherrschungfw": "Körperbeherrschung FW",
-  "kraftaktfw": "Kraftakt FW",
-  "reitenfw": "Reiten FW",
-  "schwimmenfw": "Schwimmen FW",
-  "selbstbeherrschungfw": "Selbstbeherrschung FW",
-  "singenfw": "Singen FW",
-  "sinnesschaerfefw": "Sinnesschärfe FW",
-  "tanzenfw": "Tanzen FW",
-  "taschendiebstahlfw": "Taschendiebstahl FW",
-  "verbergenfw": "Verbergen FW",
-  "zechenfw": "Zechen FW",
-  "bekehrenfw": "Bekehren & Überzeugen FW",
-  "betoerenfw": "Betören FW",
-  "einschuechternfw": "Einschüchtern FW",
-  "etikettefw": "Etikette FW",
-  "gassenwissenfw": "Gassenwissen FW",
-  "menschenkenntnisfw": "Menschenkenntnis FW",
-  "ueberredenfw": "Überreden FW",
-  "verkleidenfw": "Verkleiden FW",
-  "willenskraftfw": "Willenskraft FW",
-  "faehrtensuchenfw": "Fährtensuchen FW",
-  "fesselnfw": "Fesseln FW",
-  "fischenfw": "Fischen & Angeln FW",
-  "orientierungfw": "Orientierung FW",
-  "pflanzenkundefw": "Pflanzenkunde FW",
-  "tierkundefw": "Tierkunde FW",
-  "wildnislebenfw": "Wildnisleben FW",
-  "glueckspielfw": "Brett- & Glücksspiel FW",
-  "geographiefw": "Geographie FW",
-  "geschichtswissenfw": "Geschichtswissen FW",
-  "goetterkultefw": "Götter & Kulte FW",
-  "kriegskunstfw": "Kriegskunst FW",
-  "magiekundefw": "Magiekunde FW",
-  "mechanikfw": "Mechanik FW",
-  "rechnenfw": "Rechnen FW",
-  "rechtskundefw": "Rechtskunde FW",
-  "sagenlegendenfw": "Sagen & Legenden FW",
-  "sphaerenkundefw": "Sphärenkunde FW",
-  "sternkundefw": "Sternkunde FW",
-  "alchemiefw": "Alchemie FW",
-  "bootefw": "Boote & Schiffe FW",
-  "fahrzeugefw": "Fahrzeuge FW",
-  "handelfw": "Handel FW",
-  "hkgiftfw": "Heilkunde Gift FW",
-  "hkkrankheitenfw": "Heilkunde Krankheiten FW",
-  "hkseelefw": "Heilkunde Seele FW",
-  "hkwundenfw": "Heilkunde Wunden FW",
-  "holzbearbeitungfw": "Holzbearbeitung FW",
-  "lebensmittelbearbeitungfw": "Lebensmittelbearbeitung FW",
-  "lederbearbeitungfw": "Lederbearbeitung FW",
-  "malenzeichnenfw": "Malen & Zeichnen FW",
-  "metallbearbeitungfw": "Metallbearbeitung FW",
-  "musizierenfw": "Musizieren FW",
-  "schloesserknackenfw": "Schlösserknacken FW",
-  "steinbearbeitungfw": "Steinbearbeitung FW",
-  "stoffbearbeitungfw": "Stoffbearbeitung FW",
+  "fliegenfw": "Vol VC",
+  "gaukeleienfw": "Batellerie VC",
+  "kletternfw": "Escalade VC",
+  "koerperbeherrschungfw": "Maîtrise corporelle VC",
+  "kraftaktfw": "Tour de Force VC",
+  "reitenfw": "Équitation VC",
+  "schwimmenfw": "Natation VC",
+  "selbstbeherrschungfw": "Maîtrise de soi VC",
+  "singenfw": "Chant VC",
+  "sinnesschaerfefw": "Acuité sensorielle VC",
+  "tanzenfw": "Danse VC",
+  "taschendiebstahlfw": "Vol à la tire VC",
+  "verbergenfw": "Furtivité VC",
+  "zechenfw": "Alcools & drogues VC",
+  "bekehrenfw": "Convertir & convaincre VC",
+  "betoerenfw": "Séduction VC",
+  "einschuechternfw": "Intimidation VC",
+  "etikettefw": "Étiquette VC",
+  "gassenwissenfw": "Connaissance de la rue VC",
+  "menschenkenntnisfw": "Nature humaine VC",
+  "ueberredenfw": "Persuasion VC",
+  "verkleidenfw": "Déguisement VC",
+  "willenskraftfw": "Volonté VC",
+  "faehrtensuchenfw": "Pistage VC",
+  "fesselnfw": "Pratique des nœuds VC",
+  "fischenfw": "Pêche VC",
+  "orientierungfw": "Orientation VC",
+  "pflanzenkundefw": "Botanique VC",
+  "tierkundefw": "Zoologie VC",
+  "wildnislebenfw": "Survie VC",
+  "glueckspielfw": "Jeux VC",
+  "geographiefw": "Géographie VC",
+  "geschichtswissenfw": "Histoire VC",
+  "goetterkultefw": "Dieux & cultes VC",
+  "kriegskunstfw": "Art de la guerre VC",
+  "magiekundefw": "Magicologie VC",
+  "mechanikfw": "Mécanique VC",
+  "rechnenfw": "Calcul VC",
+  "rechtskundefw": "Droit VC",
+  "sagenlegendenfw": "Contes & légendes VC",
+  "sphaerenkundefw": "Sphérologie VC",
+  "sternkundefw": "Astronomie VC",
+  "alchemiefw": "Alchimie VC",
+  "bootefw": "Bateaux & Navires VC",
+  "fahrzeugefw": "Conduite VC",
+  "handelfw": "Commerce VC",
+  "hkgiftfw": "Soin des poisons VC",
+  "hkkrankheitenfw": "Soin des maladies VC",
+  "hkseelefw": "Soin de l'esprit VC",
+  "hkwundenfw": "Soin des blessures VC",
+  "holzbearbeitungfw": "Travail du bois VC",
+  "lebensmittelbearbeitungfw": "Cuisine VC",
+  "lederbearbeitungfw": "Travail du cuir VC",
+  "malenzeichnenfw": "Peinture & dessin VC",
+  "metallbearbeitungfw": "Travail du métal VC",
+  "musizierenfw": "Musique VC",
+  "schloesserknackenfw": "Crochetage VC",
+  "steinbearbeitungfw": "Travail de la pierre VC",
+  "stoffbearbeitungfw": "Travail du tissu VC",
   "allgemeine-sonderfertigkeiten": "CS générales",
   "allgemeine-sonderfertigkeit": "Capacité spéciale générale",
   "talent-sonderfertigkeiten": "CS de Talent",
@@ -510,19 +510,24 @@
   "zaubertrick": "Tour de magie",
   "vorteil": "Avantage",
   "nachteil": "Désavantage",
-  "alle": "Alle",
-  "segen": "Segen",
+  "alle": "Tous",
+  "segen": "Bénédictions",
   "liturgie": "Liturgie",
-  "zeremonie": "Zeremonie",
-  "typ-auswaehlen": "Typ auswählen",
-  "elfenlied": "Elfenlied",
-  "ritual": "Ritual",
-  "zauberspruch": "Zauberspruch",
-  "herrschaftsritual": "Herrschaftsritual",
-  "vertrautentrick": "Vertrautentrick",
-  "schipsf": "SchiP-Sonderfertigkeit",
-  "freier-modifikator": "freier Kampf-Mod.",
-  "ruestungsschutz": "Rüstungsschutz (RS)",
-  "faktor": "Faktor",
-  "disclaimer": "© 2019 Ulisses Spiele.  DAS SCHWARZE AUGE, AVENTURIEN, DERE, MYRANOR, THARUN, UTHURIA, RIESLAND und THE DARK EYE sind eingetragene Marken der Ulisses Spiele GmbH, Waldems."
+  "zeremonie": "Cérémonie",
+  "typ-auswaehlen": "Sélectionner le type",
+  "elfenlied": "Chanson elfique",
+  "ritual": "Rituel",
+  "zauberspruch": "Formules magiques",
+  "herrschaftsritual": "Rituel de domination",
+  "vertrautentrick": "Tours",
+  "schipsf": "Capacités spéciales-DES",
+  "freier-modifikator": "Mod. libre de Combat",
+  "ruestungsschutz": "Protection (PR)",
+  "faktor": "Facteur",
+  "disclaimer": "© 2019 Ulisses Spiele.  DAS SCHWARZE AUGE, AVENTURIEN, DERE, MYRANOR, THARUN, UTHURIA, RIESLAND et THE DARK EYE sont des marques déposées de Ulisses Spiele GmbH, Waldems.",
+  "dukaten": "Dukaten",
+  "silbertaler": "Silbertaler",
+  "heller": "Heller",
+  "kreuzer": "Kreuzer",
+  "geldbeutel": "Geldbeutel"
 }
