--- a/Das_Schwarze_Auge_5_Tsa_Edition/translations/zu.json
+++ b/Das_Schwarze_Auge_5_Tsa_Edition/translations/zu.json
@@ -524,5 +524,10 @@
   "freier-modifikator": "crwdns121496:0crwdne121496:0",
   "ruestungsschutz": "crwdns121498:0crwdne121498:0",
   "faktor": "crwdns121500:0crwdne121500:0",
-  "disclaimer": "crwdns121612:0crwdne121612:0"
+  "disclaimer": "crwdns121612:0crwdne121612:0",
+  "dukaten": "crwdns121954:0crwdne121954:0",
+  "silbertaler": "crwdns121956:0crwdne121956:0",
+  "heller": "crwdns121958:0crwdne121958:0",
+  "kreuzer": "crwdns121960:0crwdne121960:0",
+  "geldbeutel": "crwdns121962:0crwdne121962:0"
 }
