--- a/Shadowrun5thEdition/translations/fr.json
+++ b/Shadowrun5thEdition/translations/fr.json
@@ -376,12 +376,12 @@
     "whisperdescription": "Affectez la valeur par défaut pour lancer les dés en public ou au GM.",
     "willpower": "Volonté",
     "wounds": "Blessures",
-    "cancel": "Cancel",
-    "next": "Next",
-    "back": "Back",
-    "import": "Import",
-    "importer": "Importer",
-    "importecharacter": "Import Character",
-    "apply": "Apply",
-    "importertext": "You can import a character with a JSON from Chummer. The game owner must set a Compendium in the Game Settings. It does not matter which one you pick. Charactermancer software simply requires one be picked."
+    "cancel": "Annuler",
+    "next": "Suivant",
+    "back": "Précédent",
+    "import": "Importer",
+    "importer": "Importateur",
+    "importecharacter": "Importer un personnage",
+    "apply": "Appliquer",
+    "importertext": "Vous pouvez importer un personnage avec un JSON de Chummer. Le propriétaire de la partie doit définir un Compendium dans les paramètres de la partie. Peu importe lequel vous choisissez. Le logiciel Charactermancer nécessite simplement d'en choisir un."
 }
