--- a/Starfinder by Roll20/translations/fr.json
+++ b/Starfinder by Roll20/translations/fr.json
@@ -39,14 +39,14 @@
 	"bedridden": "ALITÉ",
 	"comatose": "COMATEUX",
 	"dead": "MORT",
-	"mental-disease": "MALADIE MENTALE",
+	"mental-disease": "TRAUMA MENTAL",
 	"befuddled": "PERTURBÉ",
 	"disassociated": "DISSOCIÉ",
 	"strength-poison": "POISON FORCE",
 	"healthy' selected='selected": "BONNE SANTÉ",
-	"staggered": "CHANCELLANT",
-	"immobile": "IMMOBILE",
-	"dexterity-poison": "POISON DEXTERITÉ",
+	"staggered": "CHANCELANT",
+	"immobile": "IMMOBILISÉ",
+	"dexterity-poison": "POISON DEXTÉRITÉ",
 	"sluggish": "APATHIQUE",
 	"stiffened": "RAIDI",
 	"constitution-poison": "POISON CONSTITUTION",
@@ -69,16 +69,16 @@
 	"dying": "MOURANT",
 	"encumbered": "ENCOMBRÉ",
 	"entangled": "ENCHEVÊTRÉ",
-	"exhausted": "EPUISÉ",
+	"exhausted": "ÉPUISÉ",
 	"fascinated": "FASCINÉ",
 	"fatigued": "FATIGUÉ",
 	"flat_footed": "P. AU DÉPOURVU",
 	"frightened": "EFFRAYÉ",
-	"grappled": "AGRUIPÉ",
+	"grappled": "AGRIPPÉ",
 	"helpless": "SANS DÉFENSE",
-	"nauseated": "NAUSSÉEUX",
-	"negative_levels": "NIV. NEGATIFS",
-	"off_kilter": "EN APESENTEUR",
+	"nauseated": "NAUSÉEUX",
+	"negative_levels": "NIV. NÉGATIFS",
+	"off_kilter": "EN APESANTEUR",
 	"off_target": "IMPRÉCIS",
 	"overburdened": "SURCHARGÉ",
 	"panicked": "PANIQUÉ",
@@ -166,7 +166,7 @@
 	"bluff": "BLUFF",
 	"computers": "INFORMATIQUE",
 	"culture": "CULTURE",
-	"diplomacy": "DIPLOMACIE",
+	"diplomacy": "DIPLOMATIE",
 	"disguise": "DÉGUISEMENT",
 	"engineering": "INGÉNIERIE",
 	"intimidate": "INTIMIDATION",
@@ -185,7 +185,7 @@
 	"Not-Proficient": "NON-FORMÉ",
 	"proficient": "FORMÉ",
 	"specialized": "SPÉCIALISÉ",
-	"category": "CATEGORIE",
+	"category": "CATÉGORIE",
 	"atk-u": "JET D'ATTAQUE",
 	"rng": "PORTÉE",
 	"melee": "CaC",
@@ -197,17 +197,17 @@
 	"ammo": "Munitions",
 	"usage": "UTILISATION",
 	"special": "SPÉCIAL",
-	"additional-attack": "ATTAQUE ADDITIONNELLE",
-	"roll-full-attack_": "JET DE PLEINE ATTAQUE: ",
+	"additional-attack": "ATTAQUES ADDITIONNELLES",
+	"roll-full-attack_": "JET DE PLEINE ATTAQUE : ",
 	"query": "REQUÊTE",
 	"always": "TOUJOURS",
 	"never": "JAMAIS",
-	"number-of-attacks:": "NOMBRE D'ATTAQUES:",
+	"number-of-attacks:": "NOMBRE D'ATTAQUES :",
 	"attacher": "ATTACHER",
-	"equipment": "EQUIPEMENT",
+	"equipment": "ÉQUIPEMENT",
 	"carried": "TRANSPORTÉ",
 	"not carried": "NON TRANSPORTÉ",
-	"equipped": "EQUIPÉ",
+	"equipped": "ÉQUIPÉ",
 	"encumber": "ENCOMBRÉ",
 	"over": "SURCHARGÉ",
 	"credits": "CRÉDITS",
@@ -222,7 +222,7 @@
 	"x/day": "X/JOUR",
 	"source": "SOURCE ",
 	"extraordinary": "EXTRAORDINAIRE",
-	"supernatural": "SUPERNATUREL",
+	"supernatural": "SURNATURELLE",
 	"spell-like": "POUVOIRS MAGIQUES",
 	"target": "CIBLE",
 	"duration": "DURÉE",
@@ -238,7 +238,7 @@
 	"fort-save": "VIGUEUR",
 	"ref-save": "RÉFLEXE",
 	"will-save": "VOLONTÉ",
-	"A-Sucessful-Save:": "Une sauvegarde réussie :",
+	"A-Sucessful-Save:": "Sauvegarde réussie :",
 	"spellclasses": "LANCEURS DE SORTS",
 	"ability": "CARAC.",
 	"progress": "PROGRESSION",
@@ -274,8 +274,8 @@
 	"statistics": "STATISTIQUES",
 	"feats": "DONS",
 	"other-abilities": "AUTRES COMPÉTENCES",
-	"gear": "EQUIPEMENT",
-	"ecology": "ECOLOGIE",
+	"gear": "ÉQUIPEMENT",
+	"ecology": "ÉCOLOGIE",
 	"environment": "ENVIRONNEMENT",
 	"organization": "ORGANISATION",
 	"tactics": "TACTIQUES",
@@ -290,20 +290,20 @@
 	"tier": "ÉCHELON",
 	"make-and-model": "MARQUE ET MODÈLE",
 	"frame": "ARMATURE",
-	"maneuverability": "MANOEUVRABILITÉ",
-	"drift-rating": "COÉFFICIENT DRIFT",
+	"maneuverability": "MANŒUVRABILITÉ",
+	"drift-rating": "COEFFICIENT DRIFT",
 	"crew": "ÉQUIPAGE",
-	"captain": "CAPTAINE",
+	"captain": "CAPITAINE",
 	"engineer": "INGÉNIEUR",
 	"pilot": "PILOTE",
-	"gunner": "CANNONIERS",
-	"gunnery": "CANNONAGE",
+	"gunner": "CANONNIERS",
+	"gunnery": "CANONNAGE",
 	"science-officer": "OFFICIER SCIENTIFIQUE ",
-	"captain-query": "ACTIONS DU CAPTAINE",
+	"captain-query": "ACTIONS DU CAPITAINE",
 	"engineer-query": "INGÉNIEURS",
 	"pilot-query": "PILOTES",
 	"science-officer-query": "OFFICIERS SCIENTIFIQUE",
-	"gunner-query": "CANNONIERS",
+	"gunner-query": "CANONNIERS",
 	"starship-defenses": "DÉFENSES",
 	"total": "TOTAL",
 	"ac": "CA",
@@ -313,21 +313,21 @@
 	"critical": "CRITIQUE",
 	"shield-total": "TOTAL DES BOUCLIERS",
 	"forward": "PROUE",
-	"port": "BABORD",
+	"port": "BÂBORD",
 	"aft": "TRIBORD",
 	"starboard": "POUPE",
 	"turret": "TOURELLE",
 	"systems": "SYSTÈMES",
 	"expansion-bays": "COMPARTIMENTS ANNEXES",
 	"cargo/passengers": "CARGO/PASSAGERS",
-	"cargo-placeholder": "Entrer tout cargo/passagers transportés ici",
+	"cargo-placeholder": "Entrez le cargo/passagers transportés ici",
 	"system-status": "STATUT DES SYSTÈMES",
 	"life-support-dice-range": "SYSTÈMES DE SURVIE (1-10)",
 	"life-support": "Système de survie",
 	"sensors": "Détecteurs",
 	"engines": "Propulseurs",
 	"power-core": "Réacteur",
-	"port-arc": "Arc Babord",
+	"port-arc": "Arc Bâbord",
 	"starboard-arc": "Arc de Poupe",
 	"forward-arc": "Arc de Proue",
 	"aft-arc": "Arc Tribord",
@@ -346,7 +346,7 @@
 	"aft (3)": "POU (3)",
 	"1st-attack": "1ère ATTAQUE",
 	"targets": "CIBLES",
-	"full-effect:": "PLEIN EFFET:",
+	"full-effect:": "PLEIN EFFET :",
 	"save": "SAUVEGARDE",
 	"dc": "DD",
 	"save-effect:": "EFFET DE SAUVEGARDE:",
@@ -371,7 +371,7 @@
 	"opposed-roll": "Jet opposé",
 	"visual": "Visuel",
 	"escaping-grapple": "Échapper à la saisie",
-	"helm-check": "INITIATIVE PHASE DE MANOEUVRE",
+	"helm-check": "INITIATIVE PHASE DE MANŒUVRE",
 	"arc": "ARC",
 	"bp": "PC",
 	"pcu": "UE",
@@ -387,10 +387,10 @@
 	"dr_resist": "RD / RÉSISTANCE",
 	"caster-level_": "NIVEAU LANCEUR DE SORT ",
 	"power": "ALIMENTATION",
-	"which-gunner": "Quel Cannonier",
+	"which-gunner": "Quel Canonnier",
 	"range": "PORTÉE",
 	"hexes": "HEXA.",
-	"light": "LÉGERE",
+	"light": "LÉGÈRE",
 	"heavy": "LOURDE",
 	"capital": "CAPITALE",
 	"direct-fire": "TIR DIRECT",
@@ -408,7 +408,7 @@
 	"large": "GRANDE",
 	"huge": "TRÈS GRANDE",
 	"gargantuan": "GIGANTESQUE",
-	"colossal": "COLOSSALLE",
+	"colossal": "COLOSSALE",
 	"clumsy": "DÉPLORABLE (4)",
 	"average": "MOYENNE (2)",
 	"perfect": "PARFAITE (0)",
@@ -441,8 +441,8 @@
 	"partial": "PARTIEL",
 	"full_prep": "PRÉPARATION COMPLÈTE",
 	"full_spont": "COMPLÈTEMENT SPONTANÉ",
-	"spell-like abilities": "CAPACITÉS MAGIQUES",
-	"select range": "SÉLECTIONNER LA PORTÉE",
+	"spell-like abilities": "POUVOIRS MAGIQUES",
+	"select range": "SÉLECTIONNEZ LA PORTÉE",
 	"dc-affected-by-buffs-to": "DD AFFECTÉ PAR UN BONUS POUR",
 	"character-info-help-first-line": "Cette section stocke toutes les informations de base sur votre personnage. La plupart de ces champs n’ont aucun effet sur la feuille elle-même, mais il y en a deux qui en ont :",
 	"character-info-help-second-line": "<b>Classe / niveau :</b> est rempli par la feuille quand vous entrez votre(vos) classe(s) et niveau(x) dans l’onglet de la classe.",
@@ -497,8 +497,8 @@
 	"ability damage": "Dégâts : Caractéristiques",
 	"ability dc": "DD : Caractéristiques",
 	"spell dc": "DD : Sorts",
-	"custom attribute": "Attribut personalisé",
-	"custom mod": "Custom Mod",
+	"custom attribute": "Attribut personnalisé",
+	"custom mod": "Mod personnalisé",
 	"mod method": "Méthode d'intégration des modificateurs",
 	"manual": "Manuel",
 	"wizard": "Magicien",
@@ -540,7 +540,7 @@
 	"melee weapon attacks": "Attaques avec une arme de corps à corps",
 	"ranged weapon attacks": "Attaques avec une arme à distance",
 	"custom": "Personnalisé",
-	"finish charmancer": "Congratulations on completing your character",
+	"finish charmancer": "Félicitations pour avoir terminé votre personnage",
 	"final charactermancer step": "The last step is to choose whether to overwrite any existing data on this character, or update your existing character with your choices from the mancer.",
-	"final choice": "Pick a choice below"
+	"final choice": "Prenez un des choix ci-dessous"
 }
