--- a/Symbaroum/translations/es.json
+++ b/Symbaroum/translations/es.json
@@ -19,7 +19,7 @@
 	"bonus-defense-abbrv": "Bonif. defensa",
 	"bonuses-and-advantages": "Bonificadores/Penalizadores",
 	"bonuses-and-disadvantages": "Bonificadores/Penalizadores",
-	"boons": "Dones",
+	"boons": "Bendiciones",
 	"burdens": "Cargas",
 	"character": "Personaje",
 	"character-background": "Transfondo de personaje",
@@ -88,7 +88,7 @@
 	"select": "Selección",
 	"short": "Corta",
 	"special": "Especial",
-	"strong": "Potente",
+	"strong": "Fuerte",
 	"success": "Éxito",
 	"temporary-abbrv": "Temporal",
 	"temporary-corruption": "Corrupción temp.",
@@ -141,7 +141,7 @@
 	"title-temporary-corruption-when-equipment-is-used": "Corrupción temporal cuando se utilizan objetos o artefactos",
 	"title-temporary-corruption-when-power-is-used": "Corrupción temporal cuando se utilizan poderes",
 	"title-temporary-corruption-when-ritual-is-used": "Corrupción temporal cuando se utilizan rituales",
-	"title-trait-ability": "Attribute used for Trait",
+	"title-trait-ability": "Atributo utilizado para el rasgo",
 	"title-trait-action-type": "Tipo de acción de rasgo",
 	"title-trait-check": "Tirada de rasgo",
 	"title-trait-description": "Descripción de rasgo",
@@ -172,5 +172,5 @@
 	"Adept": "Adepto",
 	"Master": "Maestro",
 	"defense": "Defensa",
-	"character-goal": "Character Goal"
+	"character-goal": "Objetivo personal"
 }
