--- a/WFRP4CharSheet/translations/fr.json
+++ b/WFRP4CharSheet/translations/fr.json
@@ -36,7 +36,7 @@
 	"EXPERIENCE": "EXPÉRIENCE",
 	"Fate": "Destin",
 	"Resilience": "Résilience",
-	"Total": "Total",
+	"Total": "Totale ",
 	"Fortune": "Chance",
 	"Resolve": "Détermination",
 	"Spent": "Dépensée",
@@ -58,7 +58,7 @@
 	"ENCUMBERANCE": "ENCOMBREMENT",
 	"Weapons": "Armes",
 	"Armour": "Armure",
-	"TRAPPINGS": "Possessions",
+	"Trappings": "Possessions",
 	"Mod": "Mod.",
 	"Max-Enc": "Enc. Max",
 	"WEALTH": "RICHESSES",
@@ -111,7 +111,7 @@
 	"Drive": "Conduite d'attelage",
 	"Endurance": "Résistance",
 	"Entertain": "Divertissement",
-	"Gamble": "Jeu",
+	"Gamble": "Pari",
 	"Gossip": "Ragot",
 	"Haggle": "Marchandage",
 	"Intimidate": "Intimidation",
@@ -120,8 +120,8 @@
 	"Navigation": "Navigation",
 	"Outdoor-Survival": "Survie",
 	"Perception": "Perception",
-	"Ride": "Équitation",
-	"Row": "Canotage",
+	"Ride": "Chevaucher",
+	"Row": "Ramer",
 	"Stealth": "Discrétion",
 	"MELEE-SPECIALISATIONS-(BASIC)": "SPÉCIALISATIONS DE MÊLÉE (BASIQUES)",
 	"Melee-i-Basic": "<i>Mêlée</i> (Base)",
@@ -135,12 +135,12 @@
 	"RANGED-SPECIAlZATION-ADVANCED": "SPÉCIALISATIONS DE PROJECTILES (AVANCÉES)",
 	"Ranged-i-Blackpowder": "<i>Projectiles</i> (Poudre noire)",
 	"Ranged-i-Bow": "<i>Projectiles</i> (Arc)",
-	"Ranged-i-Crossbow": "<i>Projectiles</i> (Arbalète)",
+	"Ranged-i-Crossbow": "<i>Distance</i> (arbalète)",
 	"Ranged-i-Engineering": "<i>Projectiles</i> (Ingénierie)",
 	"Ranged-i-Entangling": "<i>Projectiles</i> (Enchevêtrement)",
 	"Ranged-i-Explosives": "<i>Projectiles</i> (Explosifs)",
 	"Ranged-i-Sling": "<i>Projectiles</i> (Fronde)",
-	"Ranged-i-Throwing": "<i>Projectiles</i> (Lancer)",
+	"Ranged-i-Throwing": "<i>Distance</i> (lancer)",
 	"Magic-Notice": "? = Peut être utilisé sans formation mais perd tous les atouts et conserve les défauts",
 	"MAGIC-BLESSINGS-AND-MIRACLES-ADVANCED": "MAGIE, BÉNÉDICTIONS ET MIRACLES (AVANCÉS)",
 	"Language-i-Magick-p": "<i>Langue</i> (Magie)",
