--- a/Das_Schwarze_Auge_5_Tsa_Edition/translations/cs.json
+++ b/Das_Schwarze_Auge_5_Tsa_Edition/translations/cs.json
@@ -524,5 +524,10 @@
   "freier-modifikator": "freier Kampf-Mod.",
   "ruestungsschutz": "Rüstungsschutz (RS)",
   "faktor": "Faktor",
-  "disclaimer": "© 2019 Ulisses Spiele.  DAS SCHWARZE AUGE, AVENTURIEN, DERE, MYRANOR, THARUN, UTHURIA, RIESLAND und THE DARK EYE sind eingetragene Marken der Ulisses Spiele GmbH, Waldems."
+  "disclaimer": "© 2019 Ulisses Spiele.  DAS SCHWARZE AUGE, AVENTURIEN, DERE, MYRANOR, THARUN, UTHURIA, RIESLAND und THE DARK EYE sind eingetragene Marken der Ulisses Spiele GmbH, Waldems.",
+  "dukaten": "Dukaten",
+  "silbertaler": "Silbertaler",
+  "heller": "Heller",
+  "kreuzer": "Kreuzer",
+  "geldbeutel": "Geldbeutel"
 }
