Revert savage worlds translations

--- a/SavageWorlds-Tabbed/translations/zu.json
+++ b/SavageWorlds-Tabbed/translations/zu.json
@@ -1,4 +1,4 @@
-﻿{
+{
     "wild-card": "crwdns66961:0crwdne66961:0",
     "mook": "crwdns66962:0crwdne66962:0",
     "stat-block-button": "crwdns66963:0crwdne66963:0",
@@ -1172,6 +1172,7 @@
     "arcane-background-indicator-description": "crwdns110874:0crwdne110874:0",
     "fixed-copyright-issue": "crwdns110876:0crwdne110876:0",
     "start-attributes-at-d6-not-d4": "crwdns115866:0crwdne115866:0",
+    "start-attributes-at-d6": "crwdns121730:0crwdne121730:0",
     "effect": "crwdns115870:0crwdne115870:0",
     "activate-talisman": "crwdns115872:0crwdne115872:0",
     "whisper-stat-block": "crwdns121570:0crwdne121570:0",
