--- a/SavageWorlds-Tabbed/translations/es.json
+++ b/SavageWorlds-Tabbed/translations/es.json
@@ -1,9 +1,9 @@
-﻿{
+{
     "wild-card": "Comodín",
     "mook": "Extra",
     "stat-block-button": "Ficha-Bloque",
     "stat-block": "Ficha-Bloque",
-    "character-name": "Nombre",
+    "character-name": "Name",
     "civilian-name": "Nombre del personaje",
     "players-name": "Nombre del jugador",
     "basic-info": "Información básica",
@@ -20,8 +20,8 @@
     "arcanum-u": "ARCANO",
     "journal": "Diario",
     "journal-u": "DIARIO",
-    "introduction-shortened": "Introducción",
-    "configuration": "Configuración",
+    "introduction-shortened": "Intro",
+    "configuration": "Configuration",
     "all": "Completo",
     "all-u": "COMPLETO",
     "combat-options": "Opciones de combate",
@@ -34,7 +34,7 @@
     "gender": "Género",
     "age": "Edad",
     "languages": "Idiomas",
-    "native-language": "Lengua nativa",
+    "native-language": "Native Language",
     "minor": "Menor",
     "major": "Mayor",
     "tap-readout": "TAP Readout",
@@ -102,16 +102,16 @@
     "spirit": "Espíritu",
     "strength": "Fuerza",
     "vigor": "Vigor",
-    "animal-intelligence": "Inteligencia animal",
+    "animal-intelligence": "Animal intelligence",
     "health": "Salud",
     "wounds": "Heridas",
-    "max-wounds": "Heridas Máx",
+    "max-wounds": "Max Wounds",
     "reduce-reason": "Edges/Abilities that reduce Wound Mods",
     "increase-reason": "Hindrances/Abilities that increase Wound Mods",
     "max-reason": "Edges/Abilities that change the maximum of Wound Mods",
     "of": "de",
     "fatigue": "Fatiga",
-    "max-fatigue": "Nivel max. fatiga",
+    "max-fatigue": "Max Fatigue level",
     "reduce-reason-fatigue": "Edges/Abilities that reduce Fatigue Mods",
     "increase-reason-fatigue": "Hindrances/Abilities that increase Fatigue Mods",
     "max-reason-fatigue": "Edges/Abilities that change the maximum of Fatigue Mods",
@@ -122,24 +122,24 @@
     "miscellaneous": "Miscelaneo",
     "unshake-roll-modifier": "Mod. tirada Aturdimiento",
     "trait-test-modifier": "Mod. tirada Rasgo",
-    "modifiers": "modificadores",
-    "trait": "Rasgo",
+    "modifiers": "modifiers",
+    "trait": "Trait",
     "damage": "Daño",
     "damage-modifier": "Mod. Daño",
     "burn": "Quemar",
-    "hide-powers-section": "Ocultar sección de poderes",
+    "hide-powers-section": "Hide Powers Section",
     "internal-repair-system": "Reparar sistemas internos",
-    "load": "Carga",
+    "load": "Load",
     "load-limit-multiplier": "Multiplicador carga",
     "load-limit": "Carga límite",
-    "limit": "Límite",
+    "limit": "Limit",
     "modifier-abbr": "Mod",
     "max-load-modifier": "Mod. Carga máx",
-    "carried": "Llevado",
+    "carried": "Carried",
     "total-load-carried": "Carga total",
     "encumbrance-penalty": "Penalizacion por carga",
-    "penalty": "Penalizador",
-    "apply-encumbrance": "Aplicar Carga",
+    "penalty": "Penalty",
+    "apply-encumbrance": "Apply Encumbrance",
     "of-bennies": "de Benis",
     "worst-nightmare": "Peor Pesadilla",
     "motivation": "Motivación",
@@ -149,7 +149,7 @@
     "type": "Tipo",
     "description": "Descripción",
     "edges": "Ventajas",
-    "edge": "Ventaja",
+    "edge": "Edge",
     "took-at": "Obtenida en",
     "notes": "Notas",
     "unskilled": "No entrenada",
@@ -1172,6 +1172,7 @@
     "arcane-background-indicator-description": "Arcane Background Indicator: When there's more than one (1) arcane background, the Arcane Background Indicaor allows you to pick a color to associate with each arcane background. Once an individual power has been tied to an arcane background (defaults to the first arcane background), the power row will use the indicator as a background color, allowing you to quickly identify which arcane background each power goes with.  The power points display will also use the Arcane Background Indicator as the background color as quick reminder of what each color represents.",
     "fixed-copyright-issue": "Fixed the copyright notification issues.",
     "start-attributes-at-d6-not-d4": "Start Attributes at d6 instead of d4",
+    "start-attributes-at-d6": "Start Attributes at d6",
     "effect": "Effect",
     "activate-talisman": "Activate Talisman",
     "whisper-stat-block": "Whisper Stat Block",
